Added functionality to update a chart from c#. This introduces new register function. Fails when charts are on different pages currently.

--- a/samples/TestApplication/wwwroot/index.html
+++ b/samples/TestApplication/wwwroot/index.html
@@ -14,5 +14,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script type="blazor-boot">
     </script>
+    <script src="barchart.js"></script>
 </body>
 </html>
