update to Blazor 0.2 and other misc class refactorings

--- a/samples/TestApplication/wwwroot/index.html
+++ b/samples/TestApplication/wwwroot/index.html
@@ -11,9 +11,12 @@
     <app>Loading...</app>
 
     <script src="css/bootstrap/bootstrap-native.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     <script type="blazor-boot">
     </script>
-    <script src="barchart.js"></script>
+    <script src="BlazorComponents.js"></script>
 </body>
 </html>
