--- a/samples/TestApplication/wwwroot/index.html
+++ b/samples/TestApplication/wwwroot/index.html
@@ -14,8 +14,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-    <script type="blazor-boot">
-    </script>
+    <!--<script type="blazor-boot">
+    </script>-->
+    <script src="_framework/blazor.webassembly.js"></script>
     <script src="BlazorComponents.js"></script>
 </body>
 </html>
