--- a/samples/TestApplication/wwwroot/index.html
+++ b/samples/TestApplication/wwwroot/index.html
@@ -12,10 +12,11 @@
 
     <!--<script src="css/bootstrap/bootstrap-native.min.js"></script>-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     <!--<script type="blazor-boot">
-    </script>-->
+        </script>-->
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="BlazorComponents.js"></script>
 </body>
