--- a/samples/ChartJs.Blazor.Sample/wwwroot/index.html
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     <!--<script type="blazor-boot">
-        </script>-->
+            </script>-->
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="ChartJsInterop.js"></script>
+    <script src="ChartJsInterop.js" type="text/javascript"></script>
 </body>
 </html>
