--- a/samples/ChartJs.Blazor.Sample/wwwroot/index.html
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/index.html
@@ -17,7 +17,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     <!--<script type="blazor-boot">
             </script>-->
-    <script src="_framework/blazor.webassembly.js"></script>
-    <script src="ChartJsInterop.js" type="text/javascript"></script>
+    <script src="_framework/blazor.webassembly.js" type="text/javascript" language="javascript"></script>
+    <script src="ChartJsInterop.js" type="text/javascript" language="javascript"></script>
 </body>
 </html>
