--- a/samples/ChartJs.Blazor.Sample/wwwroot/index.html
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/index.html
@@ -6,7 +6,7 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
-    
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
