Added a first working version of Live Updating the chart based on the JSON dataset

--- a/samples/ChartJs.Blazor.Sample/wwwroot/index.html
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/index.html
@@ -25,5 +25,6 @@
     <!--<script src="_framework/blazor.server.js"></script>-->
     <script src="_framework/blazor.webassembly.js" type="text/javascript" language="javascript"></script>
     <script src="ChartJsInterop.js" type="text/javascript" language="javascript"></script>
+    <script src="SampleJsInterop.js" type="text/javascript" language="javascript"></script>
 </body>
 </html>
