--- a/samples/ChartJs.Blazor.Sample/wwwroot/index.html
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/index.html
@@ -21,9 +21,9 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     <!--<script type="blazor-boot">
-                </script>-->
-    <!-- <script src="_framework/blazor.server.js"></script> -->
-    <script src="_framework/blazor.webassembly.js" type="text/javascript" language="javascript"></script>
+                        </script>-->
+    <script src="_framework/blazor.server.js"></script>
+    <!-- <script src="_framework/blazor.webassembly.js" type="text/javascript" language="javascript"></script> -->
     <script src="ChartJsInterop.js" type="text/javascript" language="javascript"></script>
     <script src="SampleJsInterop.js" type="text/javascript" language="javascript"></script>
 </body>
