--- a/samples/ChartJs.Blazor.Sample/wwwroot/index.html
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/index.html
@@ -9,22 +9,25 @@
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
-    <app>Loading ChartJs.Blazor...</app>
+    <app>Loading ChartJs.Blazor Samples</app>
 
     <script src="css/bootstrap/bootstrap-native.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-    <!--<script type="blazor-boot">
-                        </script>-->
+    <!--<script type="blazor-boot" />-->
+
+
+    <!-- Static resources from ChartJs.Blazor library -->
     <!-- <script src="_framework/blazor.server.js"></script> -->
     <script src="_framework/blazor.webassembly.js" type="text/javascript" language="javascript"></script>
     <script src="_content/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
+
+    <!-- Static content from the wwwroot -->
     <script src="SampleJsInterop.js" type="text/javascript" language="javascript"></script>
 </body>
 </html>
