--- a/samples/Demo1/NuGet.Demo1/wwwroot/index.html
+++ b/samples/Demo1/NuGet.Demo1/wwwroot/index.html
@@ -11,7 +11,7 @@
 <body>
     <app>Loading...</app>
 
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/components.webassembly.js"></script>
 
     <script src="css/bootstrap/bootstrap-native.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
