--- a/samples/ChartJs.Blazor.Sample/wwwroot/index.html
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/index.html
@@ -20,11 +20,9 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     <!--<script type="blazor-boot" />-->
-
-
     <!-- Static resources from ChartJs.Blazor library -->
     <!-- <script src="_framework/blazor.server.js"></script> -->
-    <script src="_framework/blazor.webassembly.js" type="text/javascript" language="javascript"></script>
+    <script src="_framework/components.webassembly.js" type="text/javascript" language="javascript"></script>
     <script src="_content/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
 
     <!-- Static content from the wwwroot -->
