--- a/samples/ChartJs.Blazor.Sample/wwwroot/index.html
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/index.html
@@ -27,5 +27,6 @@
 
     <!-- Static content from the wwwroot -->
     <script src="SampleJsInterop.js" type="text/javascript" language="javascript"></script>
+    <link href="css/toastr.min.css" rel="stylesheet"/>
 </body>
 </html>
