--- a/samples/ChartJs.Blazor.Sample/wwwroot/index.html
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/index.html
@@ -15,7 +15,7 @@
     <app>Loading ChartJs.Blazor Samples</app>
 
     <script src="css/bootstrap/bootstrap-native.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
