--- a/samples/ChartJs.Blazor.Sample/wwwroot/index.html
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/index.html
@@ -16,14 +16,14 @@
 
     <script src="css/bootstrap/bootstrap-native.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-    
+
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 
     <script src="_framework/blazor.webassembly.js" type="text/javascript" language="javascript"></script>
-    <script src="_content/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
 
     <!-- Static content from the wwwroot -->
     <script src="SampleJsInterop.js" type="text/javascript" language="javascript"></script>
+    <script src="ChartJsInterop.js" type="text/javascript" language="javascript"></script>
 </body>
 </html>
