Moving to typescript

--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/wwwroot/index.html
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/wwwroot/index.html
@@ -25,6 +25,7 @@
 
     <!-- This is the glue between the C# code and the ChartJs charts -->
     <script src="_content/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
+    <script src="_content/ChartJs.Blazor/ExampleTsInterop.js" type="text/javascript" language="javascript"></script>
 
     <!-- Some styling -->
     <link rel="stylesheet" href="_content/ChartJs.Blazor/ChartJSBlazor.css" />
