--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/wwwroot/index.html
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/wwwroot/index.html
@@ -24,10 +24,9 @@
     <script src="_content/ChartJs.Blazor/Chart.min.js" type="text/javascript" language="javascript"></script>
 
     <!-- This is the glue between the C# code and the ChartJs charts -->
-    <script src="_content/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
-    <script src="_content/ChartJs.Blazor/ExampleTsInterop.js" type="text/javascript" language="javascript"></script>
+    <script src="_content/ChartJs.Blazor/ChartJsBlazorInterop.js" type="text/javascript" language="javascript"></script>
 
-    <!-- Some styling -->
+<!-- Some styling -->
     <link rel="stylesheet" href="_content/ChartJs.Blazor/ChartJSBlazor.css" />
 </body>
 </html>
